k3s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apercu-backend
  annotations:
    secrets.doppler.com/reload: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apercu-backend
  template:
    metadata:
      labels:
        app: apercu-backend
    spec:
      containers:
        - name: apercu-backend
          image: jeanmichelbb/ap-be:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: apercu-backend
spec:
  selector:
    app: apercu-backend
  ports:
    - port: 8000
      targetPort: 8000
